--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="css/simple_select.css" />
 <link rel="stylesheet" type="text/css" href="css/tipsy.css" />
 <link rel="stylesheet" type="text/css" href="css/jquery.contextMenu.css" />
-<title>Shiny Bird</title>
+<title>Silver Bird</title>
 <script>
 var MAX_TWEET_SIZE = 140;
 var Persistence = chrome.extension.getBackgroundPage().Persistence;
