Updating web page.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="google-site-verification" content="1rEVGioqAO99isMIDpH4UoBdehcMJB1EN5LTZi09-Nw" />
     <meta name="keywords" content="google chrome, chromium, extension, twitter">
-	<title>Chromed Bird</title>
+	<title>Silver Bird</title>
 
 	<style type="text/css">
     body {
@@ -115,7 +115,7 @@ $(function() {
 <body>
 
 <p id="title">
-<img src="bird48.png"></img>Chromed Bird
+<img src="bird48.png"></img>Silver Bird
 </p>
 
 <div id="wrong_browser" class="top_box" style="display: none;">
@@ -128,14 +128,14 @@ Get it!
 <div id="content_left" class="side_box">
   <h1>What is it?</h1>
   <p>
-    Chromed Bird is an open source Chromium extension that allows you to follow your Twitter account using Google Chrome.
+    Silver Bird is an open source Chromium extension that allows you to follow your Twitter account using Google Chrome.
   </p>
   <p>
-    More details in the <a target="_top" href="http://github.com/cezarsa/chromed_bird">GitHub Project Page</a>.
+    More details in the <a target="_top" href="http://github.com/cezarsa/silver_bird">GitHub Project Page</a>.
   </p>
   <h1>FAQ</h1>
   <p>
-    <a target="_top" href="http://wiki.github.com/cezarsa/chromed_bird/faq">Check out the FAQ now.</a>
+    <a target="_top" href="http://wiki.github.com/cezarsa/silver_bird/faq">Check out the FAQ now.</a>
   </p>
    <h1>Screenshots and users feedback</h1>
    <p>
@@ -156,7 +156,7 @@ Get it!
 <div id="content_right" class="side_box">
   <h1>ChangeLog</h1>
   <p>
-    <iframe style="width: 100%; height: 180px; border: 0;" src="http://github.com/cezarsa/chromed_bird/raw/master/Changelog"></iframe>
+    <iframe style="width: 100%; height: 180px; border: 0;" src="http://github.com/cezarsa/silver_bird/raw/master/Changelog"></iframe>
   </p>
   <h1>Current Features</h1>
   <ul>
