--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Expires" content="0">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="google-site-verification" content="1rEVGioqAO99isMIDpH4UoBdehcMJB1EN5LTZi09-Nw" />
-    <meta name="keywords" content="google chrome, chromium, extension, twitter">
+    <meta name="keywords" content="google chrome, chromium, extension, twitter, chromed bird, chromedbird">
 	<title>Silver Bird</title>
 
 	<style type="text/css">
@@ -115,7 +115,7 @@ $(function() {
 <body>
 
 <p id="title">
-<img src="bird48.png"></img>Silver Bird
+<img src="bird48.png"></img>Silver Bird (former Chromed Bird)
 </p>
 
 <div id="wrong_browser" class="top_box" style="display: none;">
