Removing API keys from the code.

--- a/background.html
+++ b/background.html
@@ -5,6 +5,8 @@
 <script type="text/javascript" src="lib/3rdparty/oauth.js"></script>
 <script type="text/javascript" src="lib/3rdparty/sha1.js"></script>
 
+<script type="text/javascript" src="lib/secret_keys.js"></script>
+
 <script type="text/javascript" src="lib/math_utils.js"></script>
 <script type="text/javascript" src="lib/persistence.js"></script>
 <script type="text/javascript" src="lib/twitter_lib.js"></script>
