--- a/popup.html
+++ b/popup.html
@@ -10,16 +10,18 @@
 <title>Silver Bird</title>
 <script>
 var MAX_TWEET_SIZE = 140;
-var Persistence = chrome.extension.getBackgroundPage().Persistence;
-var urlExpander = chrome.extension.getBackgroundPage().urlExpander;
-var tweetManager = chrome.extension.getBackgroundPage().TweetManager.instance;
-var twitterBackend = tweetManager.twitterBackend;
-var OptionsBackend = chrome.extension.getBackgroundPage().OptionsBackend;
-var TimelineTemplate = chrome.extension.getBackgroundPage().TimelineTemplate;
-var ImageService = chrome.extension.getBackgroundPage().ImageService;
-var UploadManager = chrome.extension.getBackgroundPage().UploadManager;
+var backgroundPage = chrome.extension.getBackgroundPage();
 
-chrome.i18n.getMessage = chrome.extension.getBackgroundPage().chrome.i18n.getMessage;
+var Persistence = backgroundPage.Persistence;
+var urlExpander = backgroundPage.urlExpander;
+var tweetManager = backgroundPage.TweetManager.instance;
+var twitterBackend = tweetManager.twitterBackend;
+var OptionsBackend = backgroundPage.OptionsBackend;
+var TimelineTemplate = backgroundPage.TimelineTemplate;
+var ImageService = backgroundPage.ImageService;
+var UploadManager = backgroundPage.UploadManager;
+
+chrome.i18n.getMessage = backgroundPage.chrome.i18n.getMessage;
 
 var microbloggingService = OptionsBackend.get('microblogging_service');
 var TwitterLib;
@@ -39,7 +41,7 @@ if(microbloggingService == 'twitter') {
   };
 }
 
-if(!twitterBackend.authenticated() && !twitterBackend.tokenRequested()) {
+if(backgroundPage.SecretKeys.hasValidKeys() && !twitterBackend.authenticated() && !twitterBackend.tokenRequested()) {
   twitterBackend.startAuthentication();
   window.close();
 }
@@ -1699,6 +1701,13 @@ $(function() {
   $("a.i18n").each(function() {
     $(this).html(chrome.i18n.getMessage(this.id));
   });
+
+  if(!backgroundPage.SecretKeys.hasValidKeys()) {
+    Renderer.showError(chrome.i18n.getMessage('invalid_keys'));
+    $("#workspace").show().height(300);
+    ThemeManager.init();
+    return;
+  }
 
   if(!twitterBackend.authenticated()) {
     if(twitterBackend.tokenRequested()) {
