--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@ $(function() {
 <body>
 
 <p id="title">
-<img src="bird48.png"></img>Silver Bird (former Chromed Bird)
+<img src="bird48.png"></img>Silver Bird (formerly Chromed Bird)
 </p>
 
 <div id="wrong_browser" class="top_box" style="display: none;">
 </div>
 
-<a target="_top" id="install" class="top_box" href="https://github.com/downloads/cezarsa/silver_bird/silver_bird_1.9.8.1.crx">
+<a target="_top" id="install" class="top_box" href="https://chrome.google.com/extensions/detail/encaiiljifbdbjlphpgpiimidegddhic">
 Get it!
 </a>
 
