--- a/options.html
+++ b/options.html
@@ -419,7 +419,7 @@ function updatePredictedHitsCount() {
     <table class="notifications">
       <tr>
         <th></th>
-        <th class="i18n" id="l_tweet_notificacion">Tweet Notification</th>
+        <th class="i18n" id="l_tweet_notification">Tweet Notification</th>
         <th class="i18n" id="l_change_icon">Change Icon</th>
         <th class="i18n" id="l_icon_color_column">Icon Color</th>
       <tr>
