--- a/popup.html
+++ b/popup.html
@@ -1734,7 +1734,7 @@ $(function() {
 </script>
 </head>
 <body>
-<a style="position:absolute; left:-5000px;" href="">dummy</a>
+<a style="position:absolute; left:-5000px;" href="javascript:void(0);">dummy</a>
 
 <div id="error" style="display: none;"></div>
 <div id="workspace" style="display: none;">
