disable animation in notification windows
this fix introduce a new configuration option to disable jQuery-based
animation for sliding bar in notification popup. The animation generate
a bad issue on multimonitor with notification that stuck between
screens.

--- a/options.html
+++ b/options.html
@@ -179,6 +179,8 @@
     <input type="radio" name="notify_retweets" value="always" id="notify_rt_always"> <label for="notify_rt_always" class="radio_opt i18n" id="l_notify_rt_always">Always</label>
     <input type="radio" name="notify_retweets" value="only_first" id="notify_rt_only_first"> <label for="notify_rt_only_first" class="radio_opt i18n" id="l_notify_rt_only_first">First One Only</label>
     <input type="radio" name="notify_retweets" value="never" id="notify_rt_never"> <label for="notify_rt_never" class="radio_opt i18n" id="l_notify_rt_never">Never</label><br>
+    <label for="disable_notification_animation" class="i18n" id="l_disable_notification_animation">Disable Timeout Animation (fix issues on multimonitor):</label>
+    <input type="checkbox" id="disable_notification_animation" name="disable_notification_animation" /><br/>
 
   </fieldset>
 
