--- a/options.html
+++ b/options.html
@@ -58,6 +58,7 @@
       <option value="css/chromified.css,css/chromified-theme/jquery-ui-1.7.2.custom.css">Chromified</option>
       <option value="css/whisper.css,css/whisper-theme/jquery-ui-1.7.2.custom.css">Whispers</option>
       <option value="css/darkness-theme/jquery-ui-1.7.2.custom.css,css/darkness.css">Darkness</option>
+      <option value="css/clean-theme/jquery-ui-1.7.2.custom.css,css/clean.css">Clean</option>
     </select><br>
     <label for="font_size" id="l_font_size" class="i18n">Font Size:</label>
     <select name="font_size">
