--- a/locales.html
+++ b/locales.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+
 <title>Locales Data</title>
   
 <style>
