Add apiKey for Kiqli URL shortener.

--- a/options.html
+++ b/options.html
@@ -204,6 +204,10 @@
 	  <label for="googl_personal_account" class="i18n" id="l_shortener_oauth">Use personal account authentication:</label>
 	  <input type="checkbox" name="shortener_oauth"><br/>
 	</p>
+    <p id="kiqli_opts">
+      <label for="kiqli_key">API Key:</label>
+      <input type="text" name="kiqli_key">
+    </p>
     <label for="share_include_title" class="i18n" id="l_share_include_title">Include page title (sharing):</label>
     <input type="checkbox" name="share_include_title"><br>
   </fieldset>
