--- a/options.html
+++ b/options.html
@@ -72,6 +72,8 @@
     <input type="text" style="width: 20em"; name="font_family" validator="required"><br>
     <label for="hover_timeout" class="i18n" id="l_hover_timeout">Hover to read time (ms):</label>
     <input type="text" name="hover_timeout" validator="required,number,positive"><br>
+    <label for="show_photo_thumbnails" class="i18n" id="l_show_photo_thumbnails">Show photo thumbnails</label>
+    <input type="checkbox" id="show_photo_thumbnails" name="show_photo_thumbnails" /><br>
     <label for="show_expanded_urls" class="i18n" id="l_show_expanded_urls">Expand shortened URLs:</label>
     <input type="checkbox" id="show_expanded_urls" name="show_expanded_urls" /><br>
     <label for="reply_all" class="i18n" id="l_reply_all">Reply to all mentioned:</label>
