Replace text branding

--- a/options.html
+++ b/options.html
@@ -13,12 +13,12 @@
 <script src="lib/options/options.js"></script>
 <script src="lib/options/page.js"></script>
 
-<title>Silver Bird Options</title>
+<title>Silver Feather Options</title>
 
 </head>
 <body>
 
-<h1 class="i18n" id="options_title">Silver Bird Options</h1>
+<h1 class="i18n" id="options_title">Silver Feather Options</h1>
 
 <div id="saved_notice">
   <span class="i18n" id="conf_saved">Your configuration has been successfully saved!</span>
@@ -223,7 +223,7 @@
   <fieldset>
     <legend class="i18n" id="g_timelines">Timelines</legend>
     <p class="notice i18n htmlSafe" style="text-align: center; color: black;" id="notice_api_hits">
-      You should keep API hits <span style="color: red;">below <span class="__hourly_limit"></span></span>! Otherwise Silver Bird will stop working properly and timelines won't update anymore.<br>
+      You should keep API hits <span style="color: red;">below <span class="__hourly_limit"></span></span>! Otherwise Silver Feather will stop working properly and timelines won't update anymore.<br>
       <span style="color: red;">Remember</span> that if you're using multiple Twitter clients you'll need to keep your API hits even lower.
     </p>
     <p class="hits_notice">
