--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="css/simple_select.css" />
 <link rel="stylesheet" type="text/css" href="css/tipsy.css" />
 <link rel="stylesheet" type="text/css" href="css/jquery.contextMenu.css" />
-<title>Silver Bird</title>
+<title>Silver Feather</title>
 
 <script src="lib/popup/global.js"></script>
 
