Draft work for proper character counting (#6)

--- a/popup.html
+++ b/popup.html
@@ -20,6 +20,7 @@
 <script src="lib/3rdparty/jquery.insertatcaret.min.js"></script>
 <script src="lib/3rdparty/oauth.js"></script>
 <script src="lib/3rdparty/sha1.js"></script>
+<script src="lib/3rdparty/twitter-text.js"></script>
 
 <!--script src="lib/debug.js"></script-->
 <script src="lib/any_click.js"></script>
