Read and use Twitter help/configuration data
Fixes #6

--- a/popup.html
+++ b/popup.html
@@ -33,7 +33,7 @@
 
 <script src="lib/popup/first_init.js"></script>
 
-
+<script src="lib/popup/twitter_configuration.js"></script>
 <script src="lib/popup/my_oauth.js"></script>
 <script src="lib/popup/paginator.js"></script>
 <script src="lib/popup/theme_manager.js"></script>
