Add Twemoji support (closes #20)

--- a/tweets_notifier.html
+++ b/tweets_notifier.html
@@ -3,6 +3,7 @@
 <head>
   <script src="lib/3rdparty/jquery.js"></script>
   <script src='lib/3rdparty/jquery.tipsy.js'></script>
+  <script src="lib/3rdparty/twemoji.min.js"></script>
 
   <script src="lib/any_click.js"></script>
   <script src="lib/tweet_transforms.js"></script>
