Make twemoji optional (closes #20)

--- a/options.html
+++ b/options.html
@@ -74,6 +74,8 @@
     <input type="text" name="hover_timeout" validator="required,number,positive"><br>
     <label for="show_expanded_urls" class="i18n" id="l_show_expanded_urls">Expand shortened URLs:</label>
     <input type="checkbox" id="show_expanded_urls" name="show_expanded_urls" /><br>
+    <label for="render_emoji" class="i18n" id="l_render_emoji">Render emoji:</label>
+    <input type="checkbox" id="render_emoji" name="render_emoji" /><br>
     <label for="reply_all" class="i18n" id="l_reply_all">Reply to all mentioned:</label>
     <input type="checkbox" id="reply_all" name="reply_all" /><br/>
     <label for="show_hits_in_popup" class="i18n" id="l_show_hits_in_popup">Show API hits count:</label>
