--- a/oauth_callback.html
+++ b/oauth_callback.html
@@ -6,7 +6,7 @@
 <script src="lib/shortener_lib.js"></script>
 <script src="lib/3rdparty/sha1.js"></script>
 
-<title>Silver Bird - OAuth Callback</title>
+<title>Steel Bird - OAuth Callback</title>
 </head>
 <body>
 <div style="width=600">
