--- a/options.html
+++ b/options.html
@@ -13,12 +13,12 @@
 <script src="lib/options/options.js"></script>
 <script src="lib/options/page.js"></script>
 
-<title>Silver Bird Options</title>
+<title>Steel Bird Options</title>
 
 </head>
 <body>
 
-<h1 class="i18n" id="options_title">Silver Bird Options</h1>
+<h1 class="i18n" id="options_title">Steel Bird Options</h1>
 
 <div id="saved_notice">
   <span class="i18n" id="conf_saved">Your configuration has been successfully saved!</span>
@@ -55,6 +55,7 @@
 
     <label for="theme" id="l_theme" class="i18n">UI Theme:</label>
     <select name="theme">
+      <option value="css/steelbird.css,css/steelbird-theme/jquery-ui-1.7.2.custom.css">Bird of Steel</option>
       <option value="css/chromified.css,css/chromified-theme/jquery-ui-1.7.2.custom.css">Chromified</option>
       <option value="css/whisper.css,css/whisper-theme/jquery-ui-1.7.2.custom.css">Whispers</option>
       <option value="css/darkness-theme/jquery-ui-1.7.2.custom.css,css/darkness.css">Darkness</option>
@@ -223,7 +224,7 @@
   <fieldset>
     <legend class="i18n" id="g_timelines">Timelines</legend>
     <p class="notice i18n htmlSafe" style="text-align: center; color: black;" id="notice_api_hits">
-      You should keep API hits <span style="color: red;">below <span class="__hourly_limit"></span></span>! Otherwise Silver Bird will stop working properly and timelines won't update anymore.<br>
+      You should keep API hits <span style="color: red;">below <span class="__hourly_limit"></span></span>! Otherwise Steel Bird will stop working properly and timelines won't update anymore.<br>
       <span style="color: red;">Remember</span> that if you're using multiple Twitter clients you'll need to keep your API hits even lower.
     </p>
     <p class="hits_notice">
